--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.application.name=LoginAPI2
 
-spring.datasource.url=jdbc:mysql://mysql-api-mysql-api.e.aivencloud.com:21759/defaultdb
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_D-HEeoh54hmvlOlJ5mW
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/loginapi?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = root
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 server.port=8080
+
+
